Fix issue label spacing and hover (#13553)
Fixes: https://github.com/go-gitea/gitea/issues/13545
Regressed by: https://github.com/go-gitea/gitea/pull/13458

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -111,7 +111,7 @@
         display: none !important;
       }
 
-      .item {
+      .dependency {
         padding: 0;
         white-space: nowrap;
       }
